--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "vite",
     "server": "node server/index.js",
     "build": "vite build",
     "preview": "vite preview",
@@ -19,6 +20,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "vite": "^7.3.0"
   }
 }
