feat: Integrate PostHog Analytics
- Added posthog-node and dotenv
- Created Analytics module for event tracking
- Integrated tracking for player joins, game starts, and game ends
- Added .env.example

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "posthog-node": "^5.21.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
