--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to VPS
 on:
   push:
     branches:
-      - main  # Or 'master', depending on your branch name
+      - master  # Or 'master', depending on your branch name
 
 jobs:
   deploy:
@@ -24,7 +24,7 @@ jobs:
             cd /home/promori/fight-app
             
             # Pull the latest code
-            git pull origin main
+            git pull origin master
             
             # Rebuild and restart Docker containers
             sudo docker compose up -d --build
