--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           port: 22
           script: |
             # Navigate to your project folder
-            cd /home/promori/fight-app
+            cd /home/promori/stickfighters
             
             # Pull the latest code
             git pull origin master
